# gpcrclaw

./: .env.example  .gitignore  Dockerfile.boltz2  Dockerfile.chai1  Dockerfile.esmfold2  Dockerfile.fake-worker  Dockerfile.immunebuilder  Dockerfile.rfantibody  Dockerfile.thermompnn  cloudbuild.boltz2.yaml  cloudbuild.chai1.yaml  cloudbuild.esmfold2.yaml  cloudbuild.fake-worker.yaml  cloudbuild.immunebuilder.yaml  cloudbuild.rfantibody.yaml  cloudbuild.thermompnn.yaml  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
docs/: README.md  agent-gpu-architecture.md  agent-pipeline.md  biomni-replay-analysis.md  claim-boundaries.md  data-and-scoring.md  esmfold2-worker.md  gcp-gpu-access-audit.md  github-secrets.md  gpu-cloud-runbook.md  immunebuilder-worker-plan.md  implementation-plan.md  local-demo-runbook.md  project-understanding.md  real-model-execution-plan.md  rfantibody-generation-worker.md  runtime-stack.md  scientific-workflow.md  secrets-and-env.md  target-prep.md  thermompnn-worker-plan.md  ui-and-demo-runbook.md  workstream-buckets.md
infra/: gcp-bootstrap.sh
lib/: campaign-orchestrator.ts  cloud-control.ts  demo-data.ts  local-demo-run.ts  run-control.ts
pdb_viewer/: PDBViewer.tsx
scripts/: run_batch_smoke.py  run_boltz2_batch.py  run_chai1_batch.py  run_esmfold2_batch.py  run_immunebuilder_batch.py  run_rfantibody_batch.py  run_thermompnn_batch.py  saturate_generation_gpus.py
tests/: __init__.py  test_artifacts.py  test_backends.py  test_boltz2_live.py  test_campaign_state.py  test_chai1_worker.py  test_env.py  (+10 more)
(+54 files in other folders)
