[project]
name = "gpcrclaw"
version = "0.1.0"
description = "GPCRclaw campaign agent runtime and GPU job orchestration skeleton."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gpcrclaw = "gpcrclaw.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
